--- a/PlottingExercise.ipynb
+++ b/PlottingExercise.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Basic plotting with Pandas built-in functions exercise\n",
     "\n",
-    "Here we'll practice our skills on [accessing DataFrames](AccessingDataFrames.ipynb) and [basic Pandas plotting(BasicPandasPlotting.ipynb).\n",
+    "Here we'll practice our skills on [accessing DataFrames](AccessingDataFrames.ipynb) and [basic Pandas plotting](BasicPandasPlotting.ipynb).\n",
     "\n",
     "*Don't look at them yet, but the solutions are in \n",
     "[PlottingExerciseSolutions](PlottingExerciseSolutions.ipynb)*"
@@ -242,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
